Add a lot of class.

--- a/HairMate/wwwroot/css/site.css
+++ b/HairMate/wwwroot/css/site.css
@@ -16,3 +16,18 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.card {
+    border-radius: 10px;
+    overflow: hidden;
+    transition: box-shadow 0.3s ease;
+}
+
+.card:hover {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.card-img-top {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
